crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@many_to_many_missing_target_Drizzle_pg.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const article = pgTable("article", {
  id: bigint("id", { mode: "number" }).primaryKey(),
});

export const articleRelations = relations(article, ({ one, many }) => ({
  articleUser: many(articleUser),
}));
