crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@many_to_many_multiple_junctions_Drizzle_pg.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const user = pgTable("user", {
  id: uuid("id").primaryKey(),
});

export const userRelations = relations(user, ({ one, many }) => ({
  userMediaRole: many(userMediaRole),
  userMediaFavorite: many(userMediaFavorite),
}));
